--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,15 @@
 
 /* GLOBAL STYLES */
 * {
-	margin: 0px;
-	padding: 0px;
+	margin: 50px;
+	padding: 60px;
 }
 
 body {
-    background: #fff;
-    font-family: 'Roboto', sans-serif;
+    background: lightyellow;
+    font-family: 'Roboto', sans-serif,arial;
     font-size: 16px;
-    font-weight: 300;
+    font-weight: bold;
     color: #333333;
     line-height: 28px;
     text-align: center;
@@ -18,16 +18,16 @@ body {
 }
 
 a, a:hover, a:active, a:focus {
-    border: 0 none;
+    border: 2px solid blue;
     outline: 0 none;
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 /* TYPOGRAPHIE */
 
 h1,
 h2 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif,arial;
     font-weight: 300;
 }
 
@@ -50,7 +50,7 @@ h3 {
 h4 {
     font-size: 20px;
     line-height: 30px;
-    font-weight: 300;
+    font-weight: bold;
 }
 
 h5 {
@@ -65,8 +65,8 @@ h5 {
 	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
 	border-radius: 0px;
     box-shadow: none;
-    height: 57px;
-    padding-left: 20px;
+    height: 60px;
+    padding-left: 50px;
 }
 
 /* CUSTOM CLASSES */
@@ -82,11 +82,11 @@ h5 {
     height: 1px;
     width: 25%;
     z-index: 1;
-	margin-bottom: 5px;
+	margin-bottom: 15px;
 }
 
 .colored-line-right {
-	background: #ff4a48;
+	background: black;
 	display: block;
 	float: right;
     height: 1px;
